// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThemeBreadcrumbs /> should render a ThemeBreadcrumbs from breadcrumbs 1`] = `
.c2 {
  position: relative;
  overflow: hidden;
}

.c2:before,
.c2:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, white 15%, rgba(255,255,255,0) 80% );
}

.c2:before {
  left: -2rem;
}

.c2:after {
  right: -2rem;
}

.c3 {
  overflow-x: auto;
}

.c0 {
  overflow-x: auto;
  background: #e5f1fe;
}

.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.625rem 0;
}

.c5 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
  white-space: nowrap;
}

.c6 {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c7 {
  display: block;
  width: 1rem;
  color: #005994;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.5rem 0;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <ul
            class="c4"
          >
            <li
              class="c5"
            >
              <a
                href="/"
                title="Retour à l'accueil"
              >
                Accueil
              </a>
            </li>
            <li
              aria-hidden="true"
              class="c6"
            >
              <svg
                class="c7"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="13 17 18 12 13 7"
                />
                <polyline
                  points="6 17 11 12 6 7"
                />
              </svg>
            </li>
            <li
              class="c5"
            >
              <a
                href="/themes/theme-1"
                title="Voir le theme theme 1"
              >
                theme 1
              </a>
            </li>
            <li
              aria-hidden="true"
              class="c6"
            >
              <svg
                class="c7"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="13 17 18 12 13 7"
                />
                <polyline
                  points="6 17 11 12 6 7"
                />
              </svg>
            </li>
            <li
              class="c5"
            >
              <a
                href="/themes/theme-2"
                title="Voir le theme theme 2"
              >
                theme 2
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`<ThemeBreadcrumbs /> should render a ThemeBreadcrumbs from theme 1`] = `
.c2 {
  position: relative;
  overflow: hidden;
}

.c2:before,
.c2:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, white 15%, rgba(255,255,255,0) 80% );
}

.c2:before {
  left: -2rem;
}

.c2:after {
  right: -2rem;
}

.c3 {
  overflow-x: auto;
}

.c0 {
  overflow-x: auto;
  background: #e5f1fe;
}

.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.625rem 0;
}

.c5 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
  white-space: nowrap;
}

.c6 {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c7 {
  display: block;
  width: 1rem;
  color: #005994;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.5rem 0;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <ul
            class="c4"
          >
            <li
              class="c5"
            >
              <a
                href="/"
                title="Retour à l'accueil"
              >
                Accueil
              </a>
            </li>
            <li
              aria-hidden="true"
              class="c6"
            >
              <svg
                class="c7"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="13 17 18 12 13 7"
                />
                <polyline
                  points="6 17 11 12 6 7"
                />
              </svg>
            </li>
            <li
              class="c5"
            >
              <a
                href="/themes/theme-1"
                title="Voir le theme theme 1"
              >
                theme 1
              </a>
            </li>
            <li
              aria-hidden="true"
              class="c6"
            >
              <svg
                class="c7"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="13 17 18 12 13 7"
                />
                <polyline
                  points="6 17 11 12 6 7"
                />
              </svg>
            </li>
            <li
              class="c5"
            >
              <a
                href="/themes/theme-2"
                title="Voir le theme theme 2"
              >
                theme 2
              </a>
            </li>
            <li
              aria-hidden="true"
              class="c6"
            >
              <svg
                class="c7"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="13 17 18 12 13 7"
                />
                <polyline
                  points="6 17 11 12 6 7"
                />
              </svg>
            </li>
            <li
              class="c5"
            >
              <span
                title="voir le contenu du thème title theme"
              >
                title theme
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`<ThemeBreadcrumbs /> should render nothing 1`] = `<div />`;
